--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "private": true,
   "scripts": {
-   "dev": "next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
+    "@heroicons/react": "^1.0.3",
+    "next": "^11.0.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "tailwind-scrollbar-hide": "^1.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
