--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@heroicons/react": "^1.0.3",
     "date-fns": "^2.23.0",
     "next": "^11.0.1",
+    "next-themes": "0.0.15",
     "react": "^17.0.2",
     "react-date-range": "^1.3.0",
     "react-dom": "^17.0.2",
